Add user files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/Makefile
 build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/Makefile.Debug
 build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/Makefile.Release
 Pointers/Pointers_Proj/Pointers_Proj.pro.user
+*.pro.user
