--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,34 @@
-build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/debug/main.o
-build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/debug/Reflection_GettingInfo.exe
-build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/debug/reflector.o
-build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/Makefile
-build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/Makefile.Debug
-build-Reflection_GettingInfo-Desktop_Qt_5_3_0_MinGW_32bit-Debug/Makefile.Release
-Pointers/Pointers_Proj/Pointers_Proj.pro.user
+# C++ objects and libs
+
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
+
+# Qt-es
+
+/.qmake.cache
+/.qmake.stash
 *.pro.user
+*.pro.user.*
+*.qbs.user
+*.qbs.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*-build-*
+
+# QtCreator
+
+*.autosave
+
+#QtCtreator Qml
+*.qmlproject.user
+*.qmlproject.user.*
